--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>A Basic HTML5 Template</title>
-        <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
+        <title>🐈Bilken🐈</title>
         <link rel="stylesheet" href="styles.css">
 
     </head>
