--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
         <img src="images/10.png" alt="">
         <img src="images/11.png" alt="">
         <img src="images/12.png" alt="">
+        <img src="images/13.png" alt="">
     </body>
 </html>
