redid the layout

--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
     </head>
 
     <body>
-        <img src="images/1.png" alt="">
-        <img src="images/2.png" alt="">
-        <img src="images/3.png" alt="">
-        <img src="images/4.png" alt="">
-        <img src="images/5.png" alt="">
-        <img src="images/6.png" alt="">
-        <img src="images/7.png" alt="">
-        <img src="images/8.png" alt="">
-        <img src="images/9.png" alt="">
-        <img src="images/10.png" alt="">
-        <img src="images/11.png" alt="">
-        <img src="images/12.png" alt="">
+        <div class="photos">
+            <img src="https://i.imgur.com/eEC7kfw.gifv" alt="" referrerpolicy="no-referrer">
+            <img src="images/1.png" alt="">
+            <img src="images/2.png" alt="">
+            <img src="images/3.png" alt="">
+            <img src="images/4.png" alt="">
+            <img src="images/5.png" alt="">
+            <img src="images/6.png" alt="">
+            <img src="images/7.png" alt="">
+            <img src="images/8.png" alt="">
+            <img src="images/9.png" alt="">
+            <img src="images/10.png" alt="">
+            <img src="images/11.png" alt="">
+            <img src="images/12.png" alt="">
+        </div>
     </body>
 </html>
