added a bunch of visual stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     </head>
 
     <body>
+        <Div class="topbar">
+            <h1>BULK THE CAT!</h1>
+        </Div>
         <div class="photos">
+            <video autoplay loop>
+                <source src="images/bilkvid.mp4" type="video/mp4">
+            </video> 
             <img src="images/1.png" alt="">
             <img src="images/2.png" alt="">
             <img src="images/3.png" alt="">
